# rust-web-development

./: .gitignore  Cargo.toml  Readme.md  questions.json
handle-errors/src/: lib.rs
migrations/: 20220423111815_questions_table.sql  20220423122055_answers_table.sql
src/: error.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  question.rs
src/types/: pagination.rs  question.rs
