[package]
name = "collab"
version = "0.1.0"
edition = "2018"

# Project from the book Rust Web Development by Bastian Gruber
# https://www.manning.com/books/rust-web-development

[dependencies]
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }

