[package]
name = "collab"
version = "0.1.0"
edition = "2018"

# Project from the book Rust Web Development by Bastian Gruber
# https://www.manning.com/books/rust-web-development

[dependencies]
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
serde_json = "1.0"
tokio = { version = "1.2", features = ["full"] }
parking_lot = "0.10.0"
handle-errors = { path = "handle-errors", version = "0.1.0" }
# log = "0.4"
# log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] } 
tracing-subscriber = "0.2"